# ot-harjoitustyo

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  monopoli_laajennettu.md  sekvenssikaavio.md
src/: config.py
src/skilltracker/: __main__.py  config.py  custom_types.py  database.py  exceptions.py  index.py  models.py  object_registry.py  settings.py  utils.py
src/skilltracker/data/: .env
src/skilltracker/repositories/: user_repository.py
src/skilltracker/resources/: app_config.toml  create_tables.sql
src/skilltracker/services/: skilltracker_service.py
src/skilltracker/ui/: __init__.py  ui.py  utils.py  view.py  view_login.py  view_main.py
src/tests/: test_database.py  test_registry.py
