[tool.poetry]
name = "skilltracker"
version = "0.1.0"
description = ""
authors = ["tomp2 <51736857+tomp2@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "skilltracker", from = "src"}]

[tool.poetry.scripts]
skilltracker = "skilltracker.index:main"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
dearpygui = "^1.9.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 90
extend-exclude = '''
(
  ^/laskarit
)
'''