[tool.poetry]
name = "skilltracker"
version = "0.1.0"
description = ""
authors = ["tomp2 <51736857+tomp2@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "skilltracker", from = "src" }]

[tool.poetry.scripts]
skilltracker = "skilltracker.index:main"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
dearpygui = "^1.9.0"
python-dotenv = "^1.0.0"
typing-extensions = "^4.5.0"
tomli = "^2.0.1"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
black = "^23.3.0"
mypy = "^1.2.0"
pylint = "^2.17.2"


[tool.poetry.group.black.dependencies]
black = {extras = ["d"], version = "^23.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# type: ignore[<error-code>]
exclude = ["tasks.py", "dokumentaatio", "laskarit", "src/tests"]
disallow_untyped_defs = true
disallow_any_unimported = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
[[tool.mypy.overrides]]
module = "dearpygui.*"
ignore_missing_imports = true

[tool.black]
line-length = 90
extend-exclude = '''
(
  ^/laskarit
)
'''